@@ -5,7 +5,6 @@ import static org.junit.jupiter.api.Assertions.assertIterableEquals;
 import static org.osate.testsupport.ScopeFunctions.with;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.eclipse.xtext.testing.InjectWith;
 import org.eclipse.xtext.testing.extensions.InjectionExtension;
@@ -40,15 +39,9 @@ public class ConnectionPathsTest {
 			assertEquals("left.out_f -> right.in_f", connectionPath.getName());
 			assertEquals("left.out_f -> right.in_f", connectionPath.getConnection().getName());
 			assertIterableEquals(List.of("out_f"),
-					connectionPath.getSourcePropagations()
-							.stream()
-							.map(NamedElement::getName)
-							.collect(Collectors.toList()));
+					connectionPath.getSourcePropagations().stream().map(NamedElement::getName).toList());
 			assertIterableEquals(List.of("in_f"),
-					connectionPath.getDestinationPropagations()
-							.stream()
-							.map(NamedElement::getName)
-							.collect(Collectors.toList()));
+					connectionPath.getDestinationPropagations().stream().map(NamedElement::getName).toList());
 		});
 	}
 
@@ -65,15 +58,9 @@ public class ConnectionPathsTest {
 			assertEquals("left.out_f -> right.in_f", connectionPath.getName());
 			assertEquals("left.out_f -> right.in_f", connectionPath.getConnection().getName());
 			assertIterableEquals(List.of("out_f"),
-					connectionPath.getSourcePropagations()
-							.stream()
-							.map(NamedElement::getName)
-							.collect(Collectors.toList()));
+					connectionPath.getSourcePropagations().stream().map(NamedElement::getName).toList());
 			assertIterableEquals(List.of("in_f"),
-					connectionPath.getDestinationPropagations()
-							.stream()
-							.map(NamedElement::getName)
-							.collect(Collectors.toList()));
+					connectionPath.getDestinationPropagations().stream().map(NamedElement::getName).toList());
 		});
 	}
 
@@ -104,15 +91,9 @@ public class ConnectionPathsTest {
 			assertEquals("left.left_feature_group.out_f -> right.right_feature_group.in_f",
 					connectionPath.getConnection().getName());
 			assertIterableEquals(List.of("left_feature_group.out_f"),
-					connectionPath.getSourcePropagations()
-							.stream()
-							.map(NamedElement::getName)
-							.collect(Collectors.toList()));
+					connectionPath.getSourcePropagations().stream().map(NamedElement::getName).toList());
 			assertIterableEquals(List.of("right_feature_group.in_f"),
-					connectionPath.getDestinationPropagations()
-							.stream()
-							.map(NamedElement::getName)
-							.collect(Collectors.toList()));
+					connectionPath.getDestinationPropagations().stream().map(NamedElement::getName).toList());
 		});
 	}
 
@@ -130,15 +111,9 @@ public class ConnectionPathsTest {
 					"left.left_feature_group_1.left_feature_group_2.left_feature_group_3.out_f -> right.right_feature_group_1.right_feature_group_2.right_feature_group_3.in_f",
 					connectionPath.getConnection().getName());
 			assertIterableEquals(List.of("left_feature_group_1.left_feature_group_2.left_feature_group_3.out_f"),
-					connectionPath.getSourcePropagations()
-							.stream()
-							.map(NamedElement::getName)
-							.collect(Collectors.toList()));
+					connectionPath.getSourcePropagations().stream().map(NamedElement::getName).toList());
 			assertIterableEquals(List.of("right_feature_group_1.right_feature_group_2.right_feature_group_3.in_f"),
-					connectionPath.getDestinationPropagations()
-							.stream()
-							.map(NamedElement::getName)
-							.collect(Collectors.toList()));
+					connectionPath.getDestinationPropagations().stream().map(NamedElement::getName).toList());
 		});
 	}
 
@@ -152,15 +127,9 @@ public class ConnectionPathsTest {
 			assertEquals("left.out_fg -> right.in_fg", connectionPath.getName());
 			assertEquals("left.out_fg -> right.in_fg", connectionPath.getConnection().getName());
 			assertIterableEquals(List.of("out_fg"),
-					connectionPath.getSourcePropagations()
-							.stream()
-							.map(NamedElement::getName)
-							.collect(Collectors.toList()));
+					connectionPath.getSourcePropagations().stream().map(NamedElement::getName).toList());
 			assertIterableEquals(List.of("in_fg"),
-					connectionPath.getDestinationPropagations()
-							.stream()
-							.map(NamedElement::getName)
-							.collect(Collectors.toList()));
+					connectionPath.getDestinationPropagations().stream().map(NamedElement::getName).toList());
 		});
 	}
 
@@ -174,43 +143,25 @@ public class ConnectionPathsTest {
 			assertEquals("left.out_fg.f_1 -> right.in_fg.f_1", connectionPath.getName());
 			assertEquals("left.out_fg.f_1 -> right.in_fg.f_1", connectionPath.getConnection().getName());
 			assertIterableEquals(List.of("out_fg.f_1"),
-					connectionPath.getSourcePropagations()
-							.stream()
-							.map(NamedElement::getName)
-							.collect(Collectors.toList()));
+					connectionPath.getSourcePropagations().stream().map(NamedElement::getName).toList());
 			assertIterableEquals(List.of("in_fg.f_1"),
-					connectionPath.getDestinationPropagations()
-							.stream()
-							.map(NamedElement::getName)
-							.collect(Collectors.toList()));
+					connectionPath.getDestinationPropagations().stream().map(NamedElement::getName).toList());
 		});
 		with((ConnectionPath) annexInstance.getPropagationPaths().get(1), connectionPath -> {
 			assertEquals("left.out_fg.f_2 -> right.in_fg.f_2", connectionPath.getName());
 			assertEquals("left.out_fg.f_2 -> right.in_fg.f_2", connectionPath.getConnection().getName());
 			assertIterableEquals(List.of("out_fg.f_2"),
-					connectionPath.getSourcePropagations()
-							.stream()
-							.map(NamedElement::getName)
-							.collect(Collectors.toList()));
+					connectionPath.getSourcePropagations().stream().map(NamedElement::getName).toList());
 			assertIterableEquals(List.of("in_fg.f_2"),
-					connectionPath.getDestinationPropagations()
-							.stream()
-							.map(NamedElement::getName)
-							.collect(Collectors.toList()));
+					connectionPath.getDestinationPropagations().stream().map(NamedElement::getName).toList());
 		});
 		with((ConnectionPath) annexInstance.getPropagationPaths().get(2), connectionPath -> {
 			assertEquals("left.out_fg.f_3 -> right.in_fg.f_3", connectionPath.getName());
 			assertEquals("left.out_fg.f_3 -> right.in_fg.f_3", connectionPath.getConnection().getName());
 			assertIterableEquals(List.of("out_fg.f_3"),
-					connectionPath.getSourcePropagations()
-							.stream()
-							.map(NamedElement::getName)
-							.collect(Collectors.toList()));
+					connectionPath.getSourcePropagations().stream().map(NamedElement::getName).toList());
 			assertIterableEquals(List.of("in_fg.f_3"),
-					connectionPath.getDestinationPropagations()
-							.stream()
-							.map(NamedElement::getName)
-							.collect(Collectors.toList()));
+					connectionPath.getDestinationPropagations().stream().map(NamedElement::getName).toList());
 		});
 	}
 
@@ -228,15 +179,9 @@ public class ConnectionPathsTest {
 					"left_process.left_tg.left_thread.out_f_thread -> right_process.right_tg.right_thread.in_f_thread",
 					connectionPath.getConnection().getName());
 			assertIterableEquals(List.of("out_f_thread", "out_f_tg", "out_f_process"),
-					connectionPath.getSourcePropagations()
-							.stream()
-							.map(NamedElement::getName)
-							.collect(Collectors.toList()));
+					connectionPath.getSourcePropagations().stream().map(NamedElement::getName).toList());
 			assertIterableEquals(List.of("in_f_thread", "in_f_tg", "in_f_process"),
-					connectionPath.getDestinationPropagations()
-							.stream()
-							.map(NamedElement::getName)
-							.collect(Collectors.toList()));
+					connectionPath.getDestinationPropagations().stream().map(NamedElement::getName).toList());
 		});
 	}
 }
